--- a/servicios.html
+++ b/servicios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Inicio - AstridMelanieRuizZerda</title>
+    <title>Servicios - AstridMelanieRuizZerda</title>
 </head>
 <body>
     <header>
@@ -18,7 +18,34 @@
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
-    
+    <table>
+        <caption>Tabla 1</caption>
+        <tr>
+            <th>Nombre</th>
+            <th>Apellido</th>
+            <th>Edad</th>
+        </tr>
+        <tr>
+            <td>Astrid</td>
+            <td>Ruiz</td>
+            <td>20</td>
+        </tr>
+        <tr>
+            <td>Keyra</td>
+            <td>Ruiz</td>
+            <td>13</td>
+        </tr>
+        <tr>
+            <td>Marvin</td>
+            <td>Zerda</td>
+            <td>12</td>
+        </tr>
+        <tr>
+            <td>Kevin</td>
+            <td>Zerda</td>
+            <td>17</td>
+        </tr>
+    </table>
     <footer>
         <small>© AMRZ 2019</small>
         <div>
