--- a/index.html
+++ b/index.html
@@ -18,7 +18,24 @@
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
+    <h2>Entrada 1</h2>
+    <p>
+        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+    </p>
+    <hr/>
+    <h2>Entrada 2</h2>
+    <p>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since
+        the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, 
+        but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
+         containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+    </p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/hsOrZAnQTgc" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <hr/>
     <section>
+        <h2>Articulos</h2>
         <article>
             <h2>Titulo 1</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio doloribus 
@@ -33,7 +50,7 @@
         </article>
     </section>
     <aside>
-        <h3>Archivos</h3>
+        <h3>Historial</h3>
          <ul>
             <li><a href="#">Entrada 1</a></li>
             <li><a href="#">Entrada 2</a></li>
