--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Inicio - AstridMelanieRuizZerda</title>
 </head>
+
 <body>
     <header>
-        <a href="index.html"><img src="img/logoamrz.png" alt="AMRZ logo" ></a>
+        <a href="index.html"><img src="img/logoamrz.png" alt="AMRZ logo"></a>
         <h1>AMRZ</h1>
     </header>
     <nav>
@@ -20,17 +22,15 @@
     </nav>
     <h2>Entrada 1</h2>
     <p>
-        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+        "<b>Lorem ipsum</b> dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
     </p>
     <hr/>
     <h2>Entrada 2</h2>
     <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since
-        the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, 
-        but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
-         containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
+        survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.<em> It was popularised in the 1960s</em> with the release of Letraset sheets containing Lorem Ipsum passages, and more recently
+        with desktop publishing software like <i>Aldus PageMaker</i> including versions of Lorem Ipsum.
     </p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/hsOrZAnQTgc" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <hr/>
@@ -38,40 +38,38 @@
         <h2>Articulos</h2>
         <article>
             <h2>Titulo 1</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio doloribus 
-                maxime accusantium similique, non iure. Voluptas eum placeat atque maxime hic 
-                eveniet eos, assumenda consequatur, rerum minima ab quaerat ipsa!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio doloribus maxime accusantium similique, non iure.<wbr/> Voluptas eum placeat atque maxime hic eveniet eos, assumenda consequatur, rerum minima ab quaerat ipsa!</p>
         </article>
         <article>
-                <h2>Titulo 2</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio doloribus 
-                    maxime accusantium similique, non iure. Voluptas eum placeat atque maxime hic 
-                    eveniet eos, assumenda consequatur, rerum minima ab quaerat ipsa!</p>
+            <h2>Titulo 2</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <mark>Distinctio doloribus 
+                    maxime accusantium similique, non iure.</mark> Voluptas eum placeat atque maxime hic eveniet eos, assumenda consequatur, rerum minima ab quaerat ipsa!</p>
         </article>
     </section>
     <aside>
         <h3>Historial</h3>
-         <ul>
+        <ul>
             <li><a href="#">Entrada 1</a></li>
             <li><a href="#">Entrada 2</a></li>
         </ul>
         <h3>Enlaces</h3>
-         <ul>
+        <ol>
             <li><a href="#">Enlace 1</a></li>
             <li><a href="#">Enlace 2</a></li>
-        </ul>
+        </ol>
     </aside>
     <footer>
         <small>© AMRZ 2019</small>
         <div>
             <a href="#">Politica de privacidad y cookies</a>
         </div>
-        <a href="#"><img src="img/twitter.png" alt="Twitter" ></a>
-        <a href="#"><img src="img/facebook.png" alt="Facebook" ></a>
+        <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
+        <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
         <a href="#"><img src="img/whatsapp.png" alt="Whatsapp"></a>
-        <a href="#"><img src="img/youtube.png" alt="YouTube" ></a>
+        <a href="#"><img src="img/youtube.png" alt="YouTube"></a>
         <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
 
     </footer>
 </body>
+
 </html>
