--- a/index.html
+++ b/index.html
@@ -20,19 +20,34 @@
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
-    <h2>Entrada 1</h2>
-    <p>
-        "<b>Lorem ipsum</b> dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-    </p>
-    <hr/>
-    <h2>Entrada 2</h2>
-    <p>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
-        survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.<em> It was popularised in the 1960s</em> with the release of Letraset sheets containing Lorem Ipsum passages, and more recently
-        with desktop publishing software like <i>Aldus PageMaker</i> including versions of Lorem Ipsum.
-    </p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/hsOrZAnQTgc" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <main>
+        <h2>Entrada 1</h2>
+        <p>
+            "<b>Lorem ipsum</b> dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+        </p>
+        <figure>
+            <img src="img/pandaRojo.jpg" alt="Panda rojo">
+            <figcaption>Fig.1 - Panda rojo sacando la lengua</figcaption>
+        </figure>
+        <dl>
+            <dt>Panda rojo</dt>
+            <dd>El panda rojo o panda menor es una especie de mamífero carnívoro de la familia Ailuridae, aunque se había clasificado dentro de las familias de los prociónidos y de los úrsidos.</dd>
+            <dt>Oso panda</dt>
+            <dd>El panda, oso panda o panda gigante (Ailuropoda melanoleuca) es una especie de mamífero del orden de los carnívoros y aunque hay una gran controversia al respecto, los últimos estudios de su ADN lo engloban entre los miembros de la familia
+                de los osos (Ursidae), siendo el oso de anteojos su pariente más cercano, si bien este pertenece a la subfamilia de los tremarctinos.</dd>
+        </dl>
+        <hr/>
+        <h2>Entrada 2</h2>
+        <p>
+            <strong> Ipsum is simply dummy text of the printing and typesetting industry.</strong> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+            specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.<em> It was popularised in the 1960s</em> with the release of Letraset sheets containing Lorem Ipsum passages,
+            and more recently with desktop publishing software like <i>Aldus PageMaker</i> including versions of Lorem Ipsum.
+        </p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/hsOrZAnQTgc" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </main>
+
+
     <hr/>
     <section>
         <h2>Articulos</h2>
@@ -53,10 +68,10 @@
             <li><a href="#">Entrada 2</a></li>
         </ul>
         <h3>Enlaces</h3>
-        <ol>
+        <ul>
             <li><a href="#">Enlace 1</a></li>
             <li><a href="#">Enlace 2</a></li>
-        </ol>
+        </ul>
     </aside>
     <footer>
         <small>© AMRZ 2019</small>
