commit enlace compartir

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
             <dd>El panda, oso panda o panda gigante (Ailuropoda melanoleuca) es una especie de mamífero del orden de los carnívoros y aunque hay una gran controversia al respecto, los últimos estudios de su ADN lo engloban entre los miembros de la familia
                 de los osos (Ursidae), siendo el oso de anteojos su pariente más cercano, si bien este pertenece a la subfamilia de los tremarctinos.</dd>
         </dl>
+        <!-- <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a> -->
+        <a class='twitter-share-button' data-lang='es' data-via='BloggerAyudaCom' expr:data-text='data:post.title' expr:data-url='data:post.canonicalUrl' href='http://twitter.com/share'>Twittear</a>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <a target="_blank" href="http://www.facebook.com/sharer.php?u=http://www.desarrolloweb.com/articulos/1.php">Facebook</a>
         <hr/>
         <h2>Entrada 2</h2>
         <p>
