--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Inicio - AstridMelanieRuizZerda</title>
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@micuenta" />
+    <meta name="twitter:creator" content="@micuenta" />
+    <meta property="og:url" content="index.html" />
+    <meta property="og:title" content="Este es el título de la página." />
+    <meta property="og:description" content="Esta es la descripción de la página." />
+    <meta property="og:image" content="img/pandaRojo.jpg" />
+    <script type="text/javascript" async src="https://platform.twitter.com/widgets.js"></script>
 </head>
 
 <body>
+        <div id="fb-root"></div>
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v4.0&appId=738819203127546&autoLogAppEvents=1"></script>
     <header>
         <a href="index.html"><img src="img/logoamrz.png" alt="AMRZ logo"></a>
         <h1>AMRZ</h1>
@@ -78,6 +88,9 @@
         </ul>
     </aside>
     <footer>
+            <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Hello%20world%20index.html" data-size="large">Tweet</a>
+            <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Compartir</a></div>
+        <br>
         <small>© AMRZ 2019</small>
         <div>
             <a href="#">Politica de privacidad y cookies</a>
