--- a/index.html
+++ b/index.html
@@ -6,19 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Inicio - AstridMelanieRuizZerda</title>
-    <meta name="twitter:card" content="summary" />
+    <!-- <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@micuenta" />
     <meta name="twitter:creator" content="@micuenta" />
     <meta property="og:url" content="index.html" />
     <meta property="og:title" content="Este es el título de la página." />
     <meta property="og:description" content="Esta es la descripción de la página." />
     <meta property="og:image" content="img/pandaRojo.jpg" />
-    <script type="text/javascript" async src="https://platform.twitter.com/widgets.js"></script>
+    <script type="text/javascript" async src="https://platform.twitter.com/widgets.js"></script> -->
+    <meta property="og:url" content="https://ruiz19746.github.io/Proyecto-HTML/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Proyecto AMRZ" />
+    <meta property="og:description" content="Pagina HTML -  Diseño de Interfaces Web" />
+    <meta property="og:image" content=" https://ruiz19746.github.io/Proyecto-HTML/img/logoamrz.png" />
+
 </head>
 
 <body>
-        <div id="fb-root"></div>
-        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v4.0&appId=738819203127546&autoLogAppEvents=1"></script>
+    <!-- <div id="fb-root"></div>
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v4.0&appId=738819203127546&autoLogAppEvents=1"></script> -->
     <header>
         <a href="index.html"><img src="img/logoamrz.png" alt="AMRZ logo"></a>
         <h1>AMRZ</h1>
@@ -48,9 +54,9 @@
                 de los osos (Ursidae), siendo el oso de anteojos su pariente más cercano, si bien este pertenece a la subfamilia de los tremarctinos.</dd>
         </dl>
         <!-- <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a> -->
-        <a class='twitter-share-button' data-lang='es' data-via='BloggerAyudaCom' expr:data-text='data:post.title' expr:data-url='data:post.canonicalUrl' href='http://twitter.com/share'>Twittear</a>
+        <!-- <a class='twitter-share-button' data-lang='es' data-via='BloggerAyudaCom' expr:data-text='data:post.title' expr:data-url='data:post.canonicalUrl' href='http://twitter.com/share'>Twittear</a>
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <a target="_blank" href="http://www.facebook.com/sharer.php?u=http://www.desarrolloweb.com/articulos/1.php">Facebook</a>
+        <a target="_blank" href="http://www.facebook.com/sharer.php?u=http://www.desarrolloweb.com/articulos/1.php">Facebook</a> -->
         <hr/>
         <h2>Entrada 2</h2>
         <p>
@@ -88,8 +94,24 @@
         </ul>
     </aside>
     <footer>
-            <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Hello%20world%20index.html" data-size="large">Tweet</a>
-            <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Compartir</a></div>
+        <!-- <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Hello%20world%20index.html" data-size="large">Tweet</a>
+            <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Compartir</a></div> -->
+
+        <div id="fb-root"></div>
+        <script>
+            (function(d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) return;
+                js = d.createElement(s);
+                js.id = id;
+                js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));
+        </script>
+
+        <!-- Your share button code -->
+        <div class="fb-share-button" data-href="https://ruiz19746.github.io/Proyecto-HTML/" data-layout="button_count">
+        </div>
         <br>
         <small>© AMRZ 2019</small>
         <div>
