--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta property="og:description" content="Esta es la descripción de la página." />
     <meta property="og:image" content="img/pandaRojo.jpg" />
     <script type="text/javascript" async src="https://platform.twitter.com/widgets.js"></script> -->
+    <meta property="fb:app_id" content="AMRZ proyecto" />
     <meta property="og:url" content="https://ruiz19746.github.io/Proyecto-HTML/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Proyecto AMRZ" />
