--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <meta property="og:description" content="Pagina HTML -  Diseño de Interfaces Web" />
     <meta property="og:image" content=" https://ruiz19746.github.io/Proyecto-HTML/img/logoamrz.png" />
 
+    <meta name="twitter:card" content="photo" />
+    <meta name="twitter:site" content="@mel_Np18" />
+    <meta name="twitter:title" content="AMRZ Proyecto" />
+    <meta name="twitter:description" content="Hechale un vistazo a mi página AMRZ" />
+    <meta name="twitter:image" content="https://ruiz19746.github.io/Proyecto-HTML/img/logoamrz.png" />
+    <meta name="twitter:url" content="https://ruiz19746.github.io/Proyecto-HTML/" />
+
 </head>
 
 <body>
