--- a/index.html
+++ b/index.html
@@ -102,6 +102,20 @@
         <!-- Your share button code -->
         <div class="fb-share-button" data-href="https://ruiz19746.github.io/Proyecto-HTML/" data-layout="button_count">
         </div>
+        <a href=”https://twitter.com/share” class=”twitter-share-button” data-url='https://ruiz19746.github.io/Proyecto-HTML/' data-via='Tictac_si' data-lang='es'>Compartir
+en twitter</a>
+        <script>
+            ! function(d, s, id) {
+                var
+                    js, fjs = d.getElementsByTagName(s)[0];
+                if (!d.getElementById(id)) {
+                    js = d.createElement(s);
+                    js.id = id;
+                    js.src = '//platform.twitter.com/widgets.js';
+                    fjs.parentNode.insertBefore(js, fjs);
+                }
+            }(document, 'script', 'twitter-wjs');
+        </script>
         <br>
         <small>© AMRZ 2019</small>
         <div>
