--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <!-- Your share button code -->
         <div class="fb-share-button" data-href="https://ruiz19746.github.io/Proyecto-HTML/" data-layout="button_count">
         </div>
-        <a href=”https://twitter.com/share” class=”twitter-share-button” data-url='https://ruiz19746.github.io/Proyecto-HTML/' data-via='Tictac_si' data-lang='es'>Compartir
+        <a href='https://twitter.com/share' class='twitter-share-button' data-url='https://ruiz19746.github.io/Proyecto-HTML/' data-via='Tictac_si' data-lang='es'>Compartir
 en twitter</a>
         <script>
             ! function(d, s, id) {
