--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Proyecto HTML">
+    <link rel="icon" type="image/x-icon" href="https://ruiz19746.github.io/Proyecto-HTML/img/logoamrz.png" />
     <title>Inicio - AstridMelanieRuizZerda</title>
+
     <meta property="og:url" content="https://ruiz19746.github.io/Proyecto-HTML/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Proyecto AMRZ" />
@@ -18,6 +21,11 @@
     <meta name="twitter:description" content="Hechale un vistazo a mi página AMRZ" />
     <meta name="twitter:image" content="https://ruiz19746.github.io/Proyecto-HTML/img/logoamrz.png" />
     <meta name="twitter:url" content="https://ruiz19746.github.io/Proyecto-HTML/" />
+
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Página Web AMRZ" />
+    <meta property="og:url" content="https://ruiz19746.github.io/Proyecto-HTML/" />
+    <meta property="og:image" content="https://ruiz19746.github.io/Proyecto-HTML/img/logoamrz.png" />
 
 </head>
 
