--- a/contacto.html
+++ b/contacto.html
@@ -5,13 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/x-icon" href="https://ruiz19746.github.io/Proyecto-HTML/img/logoamrz.png" />
     <title>Contacto - AstridMelanieRuizZerda</title>
-    <!-- <script type="text/javascript" async src="https://platform.twitter.com/widgets.js"></script> -->
 </head>
 
 <body>
-    <!-- <div id="fb-root"></div>
-        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v4.0&appId=738819203127546&autoLogAppEvents=1"></script> -->
     <header>
         <a href="index.html"><img src="img/logoamrz.png" alt="AMRZ logo"></a>
         <h1>AMRZ</h1>
@@ -55,9 +53,6 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3129.6813482359626!2d-0.5152254847341365!3d38.33320928760657!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6236169e5d7029%3A0x8d4bb29ec296006c!2sIES%20Mare%20Nostrum!5e0!3m2!1ses!2ses!4v1570802633055!5m2!1ses!2ses"
         width="600" height="450" style="border:0;" allowfullscreen=""></iframe>
     <footer>
-        <!-- <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Hello%20world" data-size="large">Tweet</a>
-            <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Compartir</a></div> -->
-        <br>
         <small>© AMRZ 2019</small>
         <div>
             <a href="#">Politica de privacidad y cookies</a>
