--- a/servicios.html
+++ b/servicios.html
@@ -5,13 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/x-icon" href="https://ruiz19746.github.io/Proyecto-HTML/img/logoamrz.png" />
     <title>Servicios - AstridMelanieRuizZerda</title>
-    <!-- <script type="text/javascript" async src="https://platform.twitter.com/widgets.js"></script> -->
 </head>
 
 <body>
-    <!-- <div id="fb-root"></div>
-        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v4.0&appId=738819203127546&autoLogAppEvents=1"></script> -->
     <header>
         <a href="index.html"><img src="img/logoamrz.png" alt="AMRZ logo"></a>
         <h1>AMRZ</h1>
@@ -52,9 +50,6 @@
         </tr>
     </table>
     <footer>
-        <!-- <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Hello%20world" data-size="large">Tweet</a>
-            <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Compartir</a></div> -->
-        <br>
         <small>© AMRZ 2019</small>
         <div>
             <a href="#">Politica de privacidad y cookies</a>
