--- a/contacto.html
+++ b/contacto.html
@@ -57,11 +57,11 @@
         <div>
             <a href="#">Politica de privacidad y cookies</a>
         </div>
-        <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
-        <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
-        <a href="#"><img src="img/whatsapp.png" alt="Whatsapp"></a>
-        <a href="#"><img src="img/youtube.png" alt="YouTube"></a>
-        <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
+        <a href="https://twitter.com/mel_Np18"><img src="img/twitter.png" alt="Twitter"></a>
+        <a href="facebook.com/AstridMelanieRuiz98"><img src="img/facebook.png" alt="Facebook"></a>
+        <a href="tel:695574085"><img src="img/whatsapp.png" alt="Whatsapp"></a>
+        <a href="https://www.youtube.com/channel/UC5KqNU950UtohgY6UBN5RMQ?view_as=subscriber"><img src="img/youtube.png" alt="YouTube"></a>
+        <a href="https://www.instagram.com/melanie_ruiz98/?hl=es"><img src="img/instagram.png" alt="Instagram"></a>
 
     </footer>
 </body>
