--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <a href="index.html"><img src="img/logoamrz.png" alt="AMRZ logo"></a>
         <h1>AMRZ</h1>
     </header>
+    <img src="img/portada.jpg">
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
@@ -41,6 +42,63 @@
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
+    <div>
+        Entradas mas visitadas
+        <div>
+            <img src="img/tigre.jpg"> <br/>¿De dónde viene? Contrariamente a la creencia popular, Lorem Ipsum no es simplemente un texto aleatorio.
+        </div>
+        <div>
+            <img src="img/panda.jpg"><br/> ¿De dónde viene? Contrariamente a la creencia popular, Lorem Ipsum no es simplemente un texto aleatorio.
+        </div>
+        <div>
+            <img src="img/serpiente.jpg"><br/> ¿De dónde viene? Contrariamente a la creencia popular, Lorem Ipsum no es simplemente un texto aleatorio.
+        </div>
+    </div>
+    <img src="img/naturaleza.jpg">
+    <div>
+        Entradas
+        <div>
+            <img src="img/entrada.png"> Entrada 1
+            <br/> Descripcion corta
+            <hr>
+            <img src="img/entrada.png"> Entrada 3
+            <br/> Descripcion corta
+            <hr>
+            <img src="img/entrada.png"> Entrada 5
+            <br/> Descripcion corta
+        </div>
+        <div>
+            <img src="img/entrada.png"> Entrada 2
+            <br/> Descripcion corta
+            <hr>
+            <img src="img/entrada.png"> Entrada 4
+            <br/> Descripcion corta
+            <hr>
+            <img src="img/entrada.png"> Entrada 6
+            <br/> Descripcion corta
+        </div>
+    </div>
+    <div>
+        <div>
+            <img src="img/usuarios.png">
+            <p>Hay muchas variaciones de pasajes de Lorem Ipsum disponibles, pero la mayoría ha sufrido alteración de alguna forma, por humor inyectado o palabras aleatorias que ni siquiera parecen un poco creíbles.</p>
+        </div>
+        <div>
+            <img src="img/usuario.png">
+            <img src="img/usuario.png">
+            <img src="img/usuario.png">
+        </div>
+        <div>
+            <img src="img/usuario.png">
+            <img src="img/usuario.png">
+            <img src="img/usuario.png">
+        </div>
+        <div>
+            <img src="img/usuario.png">
+            <img src="img/usuario.png">
+            <img src="img/usuario.png">
+        </div>
+    </div>
     <footer>
         <div>
             <h4>Compartir en Redes Sociales</h4>
