--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
         <a href="index.html"><img src="img/logoamrz.png" alt="AMRZ logo"></a>
         <h1>AMRZ</h1>
     </header>
-    <img src="img/portada.jpg">
+    <img src="img/naturaleza.jpg">
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
+            <li><a href="blog.html">Inicio</a></li>
             <li><a href="servicios.html">Servicios</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
@@ -54,7 +55,7 @@
             <img src="img/serpiente.jpg"><br/> ¿De dónde viene? Contrariamente a la creencia popular, Lorem Ipsum no es simplemente un texto aleatorio.
         </div>
     </div>
-    <img src="img/naturaleza.jpg">
+    <img src="img/portada.jpg">
     <div>
         Entradas
         <div>
