--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Proyecto HTML">
     <link rel="icon" type="image/x-icon" href="https://ruiz19746.github.io/Proyecto-HTML/img/logoamrz.png" />
-    <title>Inicio - AstridMelanieRuizZerda</title>
+    <title>Blog - AstridMelanieRuizZerda</title>
 
     <meta property="og:url" content="https://ruiz19746.github.io/Proyecto-HTML/" />
     <meta property="og:type" content="website" />
