--- a/blog.html
+++ b/blog.html
@@ -27,6 +27,10 @@
     <meta property="og:url" content="https://ruiz19746.github.io/Proyecto-HTML/" />
     <meta property="og:image" content="https://ruiz19746.github.io/Proyecto-HTML/img/logoamrz.png" />
 
+    <meta property="og:image:secure_url" content="https://ruiz19746.github.io/Proyecto-HTML/img/logoamrz.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="600">
+
 </head>
 
 <body>
