--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a href="index.html"><img src="img/logoamrz.png" alt="AMRZ logo"></a>
         <h1>AMRZ</h1>
     </header>
-    <img src="img/naturaleza.jpg">
+    <img src="img/naturaleza.jpg" alt="naturaleza">
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
@@ -46,58 +46,58 @@
     <div>
         Entradas mas visitadas
         <div>
-            <img src="img/tigre.jpg"> <br/>¿De dónde viene? Contrariamente a la creencia popular, Lorem Ipsum no es simplemente un texto aleatorio.
+            <img src="img/tigre.jpg" alt="tigre"> <br/>¿De dónde viene? Contrariamente a la creencia popular, Lorem Ipsum no es simplemente un texto aleatorio.
         </div>
         <div>
-            <img src="img/panda.jpg"><br/> ¿De dónde viene? Contrariamente a la creencia popular, Lorem Ipsum no es simplemente un texto aleatorio.
+            <img src="img/panda.jpg" alt="panda"><br/> ¿De dónde viene? Contrariamente a la creencia popular, Lorem Ipsum no es simplemente un texto aleatorio.
         </div>
         <div>
-            <img src="img/serpiente.jpg"><br/> ¿De dónde viene? Contrariamente a la creencia popular, Lorem Ipsum no es simplemente un texto aleatorio.
+            <img src="img/serpiente.jpg" alt="serpiente"><br/> ¿De dónde viene? Contrariamente a la creencia popular, Lorem Ipsum no es simplemente un texto aleatorio.
         </div>
     </div>
-    <img src="img/portada.jpg">
+    <img src="img/portada.jpg" alt="portada">
     <div>
         Entradas
         <div>
-            <img src="img/entrada.png"> Entrada 1
+            <img src="img/entrada.png" alt="entrada"> Entrada 1
             <br/> Descripcion corta
             <hr>
-            <img src="img/entrada.png"> Entrada 3
+            <img src="img/entrada.png" alt="entrada"> Entrada 3
             <br/> Descripcion corta
             <hr>
-            <img src="img/entrada.png"> Entrada 5
+            <img src="img/entrada.png" alt="entrada"> Entrada 5
             <br/> Descripcion corta
         </div>
         <div>
-            <img src="img/entrada.png"> Entrada 2
+            <img src="img/entrada.png" alt="entrada"> Entrada 2
             <br/> Descripcion corta
             <hr>
-            <img src="img/entrada.png"> Entrada 4
+            <img src="img/entrada.png" alt="entrada"> Entrada 4
             <br/> Descripcion corta
             <hr>
-            <img src="img/entrada.png"> Entrada 6
+            <img src="img/entrada.png" alt="entrada"> Entrada 6
             <br/> Descripcion corta
         </div>
     </div>
     <div>
         <div>
-            <img src="img/usuarios.png">
+            <img src="img/usuarios.png" alt="usuarios">
             <p>Hay muchas variaciones de pasajes de Lorem Ipsum disponibles, pero la mayoría ha sufrido alteración de alguna forma, por humor inyectado o palabras aleatorias que ni siquiera parecen un poco creíbles.</p>
         </div>
         <div>
-            <img src="img/usuario.png">
-            <img src="img/usuario.png">
-            <img src="img/usuario.png">
+            <img src="img/usuario.png" alt="usuario">
+            <img src="img/usuario.png" alt="usuario">
+            <img src="img/usuario.png" alt="usuario">
         </div>
         <div>
-            <img src="img/usuario.png">
-            <img src="img/usuario.png">
-            <img src="img/usuario.png">
+            <img src="img/usuario.png" alt="usuario">
+            <img src="img/usuario.png" alt="usuario">
+            <img src="img/usuario.png" alt="usuario">
         </div>
         <div>
-            <img src="img/usuario.png">
-            <img src="img/usuario.png">
-            <img src="img/usuario.png">
+            <img src="img/usuario.png" alt="usuario">
+            <img src="img/usuario.png" alt="usuario">
+            <img src="img/usuario.png" alt="usuario">
         </div>
     </div>
     <footer>
@@ -119,7 +119,7 @@
             <div class="fb-share-button" data-href="https://ruiz19746.github.io/Proyecto-HTML/" data-layout="button_count"></div>
             <div>
                 <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <!-- <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
             </div>
         </div>
         <br>
