--- a/blog.html
+++ b/blog.html
@@ -118,7 +118,7 @@
             <div class="fb-share-button" data-href="https://ruiz19746.github.io/Proyecto-HTML/" data-layout="button_count"></div>
             <div>
                 <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <!-- <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
             </div>
         </div>
         <br>
